tests/paczka1/fuzzy1/48143575.err
Error in line 11: iEDG6xiDG A139 76,6
Error in line 13: iEDG6xiDG S810 49,1
Error in line 4: 10A1r A354 48,9
